Added a lot of stuff and changed a lot, before reordering exceptions

--- a/article/EssenceOfLiveCoding.bib
+++ b/article/EssenceOfLiveCoding.bib
@@ -1,3 +1,12 @@
+@inproceedings{Rhine,
+  title={Rhine: FRP with type-level clocks},
+  author={B{\"a}renz, Manuel and Perez, Ivan},
+  booktitle={Proceedings of the 11th International Symposium on Haskell},
+  pages={145--157},
+  year={2018},
+  organization={ACM}
+}
+
 @inproceedings{Dunai,
  author = {Perez, Ivan and B\"{a}renz, Manuel and Nilsson, Henrik},
  title = {Functional Reactive Programming, Refactored},
@@ -85,7 +94,7 @@ edition = {ACM SIGPLAN International Workshop on Types in Language Design and Im
 }
 
 
-@inproceedings{magalhaes2010generic,
+@inproceedings{GenericDeriving,
   title={A generic deriving mechanism for Haskell},
   author={Magalh{\~a}es, Jos{\'e} Pedro and Dijkstra, Atze and Jeuring, Johan and L{\"o}h, Andres},
   booktitle={ACM Sigplan Notices},
@@ -117,4 +126,11 @@ edition = {ACM SIGPLAN International Workshop on Types in Language Design and Im
   pages={269--282},
   year={2014},
   organization={ACM}
+}
+
+@phdthesis{MonadFix,
+  title={Value recursion in monadic computations},
+  author={Erk{\"o}k, Levent},
+  year={2002},
+  school={OGI School of Science \& Engineering at OHSU}
 }
