--- a/article/EssenceOfLiveCoding.bib
+++ b/article/EssenceOfLiveCoding.bib
@@ -134,3 +134,10 @@ edition = {ACM SIGPLAN International Workshop on Types in Language Design and Im
   year={2002},
   school={OGI School of Science \& Engineering at OHSU}
 }
+
+@book{ProperTesting,
+  title={Property-Based Testing with PropEr, Erlang, and Elixir},
+  author={Fred Hebert},
+  year={2019},
+  publisher={Pragmatic Bookshelf}
+}
