--- a/article/EssenceOfLiveCoding.bib
+++ b/article/EssenceOfLiveCoding.bib
@@ -141,3 +141,119 @@ edition = {ACM SIGPLAN International Workshop on Types in Language Design and Im
   year={2019},
   publisher={Pragmatic Bookshelf}
 }
+
+@inproceedings{Warp,
+  title = {Warp},
+  booktitle = {The Performance of Open Source Applications},
+  author = {Yamamoto, Kazu and Snoyman, Michael and Voellmy, Andreas},
+  howpublished = {\url{http://www.aosabook.org/en/posa/warp.html}}
+}
+
+@article{Arrows,
+  title={Generalising monads to arrows},
+  author={Hughes, John},
+  journal={Science of computer programming},
+  volume={37},
+  number={1-3},
+  pages={67--111},
+  year={2000},
+  publisher={Elsevier}
+}
+
+
+@inproceedings{ArrowNotation,
+  title={A new notation for arrows},
+  author={Paterson, Ross},
+  booktitle={ACM SIGPLAN Notices},
+  volume={36},
+  number={10},
+  pages={229--240},
+  year={2001},
+  organization={ACM}
+}
+
+@inproceedings{quickcheck,
+ author = {Claessen, Koen and Hughes, John},
+ title = {QuickCheck: A Lightweight Tool for Random Testing of Haskell Programs},
+ booktitle = {Proceedings of the International Conference on Functional Programming},
+ series = {ICFP 2000},
+ year = {2000},
+ publisher = {ACM},
+}
+
+@misc{Gloss,
+  author = {Lippmeier, Ben},
+  title = {Gloss},
+  year = {2010},
+  publisher = {GitHub},
+  journal = {GitHub},
+  howpublished = {\url{https://github.com/benl23x5/gloss}}
+}
+
+@misc{foreign-store,
+  author = {Done, Chris},
+  title = {foreign-store},
+  year = {2014},
+  publisher = {GitHub},
+  journal = {GitHub},
+  howpublished = {\url{https://github.com/esoeylemez/foreign-store}}
+}
+
+@misc{mmorph,
+  author = {Gonzalez, Gabriel},
+  title = {mmorph},
+  year = {2013},
+  publisher = {GitHub},
+  journal = {GitHub},
+  howpublished = {\url{https://github.com/Gabriel439/Haskell-MMorph-Library}}
+}
+
+
+@article{QuickCheckIO,
+  title={Testing monadic code with QuickCheck},
+  author={Claessen, Koen and Hughes, John},
+  journal={ACM SIGPLAN Notices},
+  volume={37},
+  number={12},
+  pages={47--59},
+  year={2002},
+  publisher={ACM},
+  howpublished = {http://www.cse.chalmers.se/~rjmh/Papers/QuickCheckST.ps}
+}
+
+
+@article{Mealy,
+  title={A method for synthesizing sequential circuits},
+  author={Mealy, George H},
+  journal={The Bell System Technical Journal},
+  volume={34},
+  number={5},
+  pages={1045--1079},
+  year={1955},
+  publisher={Nokia Bell Labs}
+}
+
+@inproceedings{jones1995functional,
+  title={Functional programming with overloading and higher-order polymorphism},
+  author={Jones, Mark P},
+  booktitle={International School on Advanced Functional Programming},
+  pages={97--136},
+  year={1995},
+  organization={Springer}
+}
+
+@misc{transformers,
+  title={transformers},
+  author={Gill, Andy and Paterson, Ross},
+  year={2004},
+  howpublished={https://hub.darcs.net/ross/transformers/}
+}
+
+@misc{boltzmann-samplers,
+  author = {Li-yao Xia},
+  title = {boltzmann-samplers},
+  year = {2017},
+  publisher = {GitHub},
+  journal = {GitHub},
+  howpublished = {\url{https://github.com/Lysxia/boltzmann-samplers}}
+}
