Last changes before first REBLS submission

--- a/article/EssenceOfLiveCoding.bib
+++ b/article/EssenceOfLiveCoding.bib
@@ -257,3 +257,29 @@ edition = {ACM SIGPLAN International Workshop on Types in Language Design and Im
   journal = {GitHub},
   howpublished = {\url{https://github.com/Lysxia/boltzmann-samplers}}
 }
+
+@misc{ghcid,
+  author = {Neil Mitchell},
+  title = {ghcid},
+  year = {2014},
+  publisher = {GitHub},
+  journal = {GitHub},
+  howpublished = {\url{https://github.com/ndmitchell/ghcid/}}
+}
+
+@inproceedings{CaspiPouzet,
+  TITLE = {{A Co-iterative Characterization of Synchronous Stream Functions}},
+  AUTHOR = {Caspi, Paul and Pouzet, Marc},
+  URL = {https://hal.archives-ouvertes.fr/hal-01622305},
+  BOOKTITLE = {{Workshop on Coalgebraic Methods in Computer Science (CMCS'98)}},
+  ADDRESS = {Lisbon, Portugal},
+  PUBLISHER = {{Elsevier}},
+  SERIES = {Electronic Notes in Theoretical Computer Science},
+  VOLUME = {11},
+  PAGES = {1-21},
+  YEAR = {1998},
+  MONTH = Mar,
+  DOI = {10.1016/S1571-0661(04)00050-7},
+  HAL_ID = {hal-01622305},
+  HAL_VERSION = {v1},
+}
