Changes according to REBLS 2020 reviews

--- a/article/EssenceOfLiveCoding.bib
+++ b/article/EssenceOfLiveCoding.bib
@@ -283,3 +283,50 @@ edition = {ACM SIGPLAN International Workshop on Types in Language Design and Im
   HAL_ID = {hal-01622305},
   HAL_VERSION = {v1},
 }
+
+@article{WinogradHudak2014settable,
+  title={Settable and non-interfering signal functions for FRP: how a first-order switch is more than enough},
+  author={Winograd-Cort, Daniel and Hudak, Paul},
+  journal={ACM SIGPLAN Notices},
+  volume={49},
+  number={9},
+  pages={213--225},
+  year={2014},
+  publisher={ACM New York, NY, USA}
+}
+
+@inproceedings{murphy2016livecoding,
+  title={A livecoding semantics for functional reactive programming},
+  author={Murphy, Tom E.},
+  booktitle={Proceedings of the 4th International Workshop on Functional Art, Music, Modelling, and Design},
+  pages={48--53},
+  year={2016}
+}
+
+@misc{HyperHaskell,
+  author = {Apfelmus, Heinrich},
+  title = {HyperHaskell},
+  year = {2016},
+  publisher = {GitHub},
+  journal = {GitHub},
+  howpublished = {\url{https://github.com/HeinrichApfelmus/hyper-haskell}}
+}
+
+@inproceedings{apfelmus2019functors,
+  title={Functors and music},
+  author={Apfelmus, Heinrich},
+  booktitle={Proceedings of the 7th ACM SIGPLAN International Workshop on Functional Art, Music, Modeling, and Design},
+  pages={52--55},
+  year={2019}
+}
+
+@article{ingalls2020evolutionofsmalltalk,
+  title={The evolution of Smalltalk: from Smalltalk-72 through Squeak},
+  author={Ingalls, Daniel},
+  journal={Proceedings of the ACM on Programming Languages},
+  volume={4},
+  number={HOPL},
+  pages={1--101},
+  year={2020},
+  publisher={ACM New York, NY, USA}
+}
