--- a/article/essence.cls
+++ b/article/essence.cls
@@ -4,6 +4,7 @@
 
 \RequirePackage[utf8]{inputenc}
 \RequirePackage{minted}
+\setmintedinline{style=bw}
 \RequirePackage[nomargin,inline]{fixme}
 \RequirePackage{hyperref}
 \RequirePackage{verbatim}
@@ -13,4 +14,3 @@
 
 \newenvironment{code}{\VerbatimEnvironment\begin{minted}{haskell}}{\end{minted}}
 \newenvironment{spec}{\VerbatimEnvironment\begin{minted}{haskell}}{\end{minted}}
-
