--- a/article/EssenceOfLiveCoding.bib
+++ b/article/EssenceOfLiveCoding.bib
@@ -330,3 +330,53 @@ edition = {ACM SIGPLAN International Workshop on Types in Language Design and Im
   year={2020},
   publisher={ACM New York, NY, USA}
 }
+
+@incollection{MILNER1975157,
+title = "Processes: A Mathematical Model of Computing Agents",
+editor = "H.E. Rose and J.C. Shepherdson",
+series = "Studies in Logic and the Foundations of Mathematics",
+publisher = "Elsevier",
+volume = "80",
+pages = "157 - 173",
+year = "1975",
+booktitle = "Logic Colloquium '73",
+issn = "0049-237X",
+doi = "https://doi.org/10.1016/S0049-237X(08)71948-7",
+url = "http://www.sciencedirect.com/science/article/pii/S0049237X08719487",
+author = "Robin Milner",
+abstract = "Publisher Summary
+Most of the computing agents with which computing science is concerned exhibit behavior that is not just the computation of a mathematical function of their inputs but rather a possibly infinite sequence of communications with their environment. The mathematics of processes promises to unify the behavioral study of computing agents, both hardware and software. This chapter describes the concepts that may be useful in modeling the behavior of intercommunicating agents, together with some examples. It is becoming clear that informal (but rigorous) proofs about communicating systems, analogous to proofs about serial programs based on the assertion technique introduced by Floyd and others, are considerably harder to express."
+}
+
+@article{hasuo_jacobs_2011,
+title={Traces for coalgebraic components},
+volume={21},
+DOI={10.1017/S0960129510000551},
+number={2},
+journal={Mathematical Structures in Computer Science},
+publisher={Cambridge University Press},
+author={Hasuo, Ichiro and Jacobs, Bart},
+year={2011},
+pages={267–320}
+}
+
+@article{pirog2014coinductive,
+  title={The coinductive resumption monad},
+  author={Pir{\'o}g, Maciej and Gibbons, Jeremy},
+  journal={Electronic notes in theoretical computer science},
+  volume={308},
+  pages={273--288},
+  year={2014},
+  publisher={Elsevier}
+}
+
+@article{AbramskyHaghverdiScott,
+author = {Abramsky, Samson and Haghverdi, Esfandiar and Scott, Philip},
+year = {2002},
+month = {10},
+pages = {625-665},
+title = {Geometry of Interaction and Linear Combinatory Algebras.},
+volume = {12},
+journal = {Mathematical Structures in Computer Science},
+doi = {10.1017/S0960129502003730}
+}
